<resources>
    <string name="app_name">Save Status</string>
    <string name="tab_text_1">Images</string>
    <string name="tab_text_2">Videos</string>
    <string name="tab_text_3">Saved</string>
    <string name="permission">Please give storage permission <u><i>Click here</i></u></string>
    <string name="howtouse1">1. Open your WhatsApp</string>
    <string name="howtouse2">2. View status</string>
    <string name="howtouse3">3. Comeback and save any image or video</string>
    <string name="howtouse4">4. Click on save</string>
    <string name="nostatusimages">No images to show. Want to know how to use <u>Click here</u></string>
    <string name="nostatusvideos">No videos to show. Want to know how to use <u>Click here</u></string>
    <string name="nosavedstatus">No saved status to show. Want to know how to use <u>Click here</u></string>
    <string name="app_id">ca-app-pub-4746738763099699~8237704869</string>
    <string name="image_fragment_banner_id">ca-app-pub-4746738763099699/3324121939</string>
    <string name="start_screen_banner_id">ca-app-pub-4746738763099699/3718927506</string>
    <string name="video_fragment_banner_id">ca-app-pub-4746738763099699/3573202244</string>
    <string name="saved_fragment_banner_id">ca-app-pub-4746738763099699/6589467574</string>
    <string name="picture_iterstitial_id">ca-app-pub-4746738763099699/4905206032</string>
    <string name="how_to_use_banner_id">ca-app-pub-4746738763099699/1336763593</string>
    <string name="main_screen_banner_id">ca-app-pub-4746738763099699/6309888678</string>
    <string name="more_screen_banner_id">ca-app-pub-4746738763099699/3421401220</string>
    <string name="applovin_banner_id">45a001d2724272b4</string>
    <string name="applovin_main_screen_banner_id">ef30653e5eef9e2d</string>
    <string name="applovin_interstitial_id">af63f34ee8ec7860</string>
    <string name="adx_app_id">ca-app-pub-6736256473202733~5786299946</string>
    <string name="adx_app_id_2">ca-app-pub-5356614082635334~5879548108</string>
    <string name="adx_banner_id">/7047,22946396544/apl/mix2ad3223/com.statuses.statussavers/bannerinapp</string>
    <string name="adx_banner_id_2">/22926502423/mix2ads_Status_Saver_banner</string>
    <string name="storage_permission">Please give storage permission to save status</string>
    <string name="storage_permission2">Please give access to .Statuses folder to get all the status</string>
    <string name="step1">Open whatsapp and go to status section</string>
    <string name="step2">View full status on whatsapp and come back to this app</string>
    <string name="step3">Select any image or video and tap the save icon at the bottom</string>
    <string name="applovin_key">_MudM74bNJVdvK6QTPbWsZJ6vDPNKe5FewSXgwuxFv7gUivBxUg9FRqeTGZKBPZTl7byRprTRC93GbnEC9bLu5</string>
</resources>