<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#CDE2B8"
    tools:context=".HowToUse">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:textStyle="bold"
        android:id="@+id/htu1"
        android:textSize="20dp"
        android:text="@string/howtouse1"/>
    <ImageView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:src="@mipmap/openwhatsapp"
        android:layout_below="@+id/htu1"
        android:id="@+id/htui1"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"></ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:textStyle="bold"
        android:layout_below="@id/htui1"
        android:id="@+id/htu2"
        android:textSize="20dp"
        android:text="@string/howtouse2"/>
    <ImageView
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:src="@mipmap/viewstatus"
        android:layout_below="@+id/htu2"
        android:id="@+id/htui2"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"></ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:textStyle="bold"
        android:layout_below="@id/htui2"
        android:id="@+id/htu3"
        android:textSize="20dp"
        android:text="@string/howtouse3"/>
    <ImageView
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:src="@mipmap/openapp"
        android:layout_below="@+id/htu3"
        android:id="@+id/htui3"
        android:paddingTop="20dp"
        android:layout_centerHorizontal="true"></ImageView>


</RelativeLayout>