<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:maxads="http://schemas.applovin.com/android/1.0">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/maxAd"
        android:id="@+id/scrollView"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:id="@+id/firststep"
                android:textColor="@color/text_color"
                android:layout_marginTop="10dp">
<!--                <ImageView-->
<!--                    android:id="@+id/first"-->
<!--                    android:layout_width="20dp"-->
<!--                    android:layout_height="20dp"-->
<!--                    android:layout_alignParentTop="true"-->
<!--                    android:src="@mipmap/numberone"-->
<!--                    />-->
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/first"
                    android:layout_height="wrap_content"
                    android:text="1."
                    android:textColor="#202020"
                    android:textSize="15dp" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/first"
                    android:paddingLeft="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/step1"
                        android:layout_height="wrap_content"
                        android:text="@string/step1"
                        android:textColor="@color/text_color"
                        android:textSize="15dp" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:id="@+id/openwhatsapp"
                        android:layout_below="@+id/step1"
                        android:background="@drawable/image_border"
                        android:src="@mipmap/openwhatsapp_transformed"/>

                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:id="@+id/secondstep"
                android:layout_below="@id/firststep"
                android:layout_marginTop="30dp">
<!--                <ImageView-->
<!--                    android:id="@+id/second"-->
<!--                    android:layout_width="20dp"-->
<!--                    android:layout_height="20dp"-->
<!--                    android:layout_alignParentTop="true"-->
<!--                    android:src="@mipmap/numbertwo"-->
<!--                    />-->
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/second"
                    android:layout_height="wrap_content"
                    android:text="2."
                    android:textColor="#202020"
                    android:textSize="15dp" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/second"
                    android:paddingLeft="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/step2"
                        android:layout_height="wrap_content"
                        android:text="@string/step2"
                        android:textColor="@color/text_color"
                        android:textSize="15dp" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:id="@+id/viewstatus"
                        android:layout_below="@+id/step2"
                        android:background="@drawable/image_border"
                        android:src="@mipmap/viewstatus_transformed"/>

                </RelativeLayout>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:id="@+id/thirdstep"
                android:layout_below="@id/secondstep"
                android:layout_marginTop="30dp"
                android:paddingBottom="100dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/third"
                    android:layout_height="wrap_content"
                    android:text="3."
                    android:textColor="#202020"
                    android:textSize="15dp" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/third"
                    android:paddingLeft="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/step3"
                        android:layout_height="wrap_content"
                        android:text="@string/step3"
                        android:textColor="@color/text_color"
                        android:textSize="15dp" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_marginTop="12dp"
                        android:id="@+id/savestatus"
                        android:layout_below="@+id/step3"
                        android:src="@mipmap/group_39_1"/>

                </RelativeLayout>

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
    <com.applovin.mediation.ads.MaxAdView
        android:id="@+id/maxAd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        maxads:adUnitId="@string/applovin_banner_id" />
</RelativeLayout>